# AI_trend_Research_-_Content

./: README.md  pyproject.toml
src/pana/: __init__.py  main1.py
src/pana/crews/teaching_crew/: teaching_crew.py
src/pana/crews/teaching_crew/config/: agents.yaml  tasks.yaml
