[project]
name = "pana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sehrish-hub", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.0.1",
]

[project.scripts]
pana = "pana:main"
panaflow = "pana.main:kickoff"
panaflow1 = "pana.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
